# report-summary

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  definitions.py  pyproject.toml  requirements.txt
ingest/: sfcr_ingest.py  validate_and_dump.py
ingest/tests/: test_contract.py
scripts/: cli.py  export_schema.py  test_ollama.py
sfcr/: config.py  db.py
sfcr/eval/: eval.py  goldgen.py
sfcr/extract/: batch.py  extractor.py  fields.yaml  llm_client_factory.py  llm_factory.py  ollama_client.py  scale_detect.py  schema.py  textnorm.py  verify.py
sfcr/extract/tests/: test_dehyphenation.py  test_evidence_hash.py  test_extractor.py  test_prev_in_parantheses.py  test_scale_detect.py  test_verify.py
sfcr/ingest/: schema.py  sfcr_ingest.py
sfcr/ingest/tests/: test_contract.py  test_subsections_spans.py
sfcr/llm/: llm_text_client.py  llm_text_client_factory.py  mock_text_client.py  ollama_text_client.py  openai_text_client.py
sfcr/summarize/: summarize.py
tools/: ui_app.py
